# aether-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: ai.py  auth.py  health.py
backend/app/config/: settings.py
backend/app/core/: constants.py  dependencies.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  responses.py  security.py
backend/app/database/: __init__.py  base.py  mixins.py  session.py  types.py
backend/app/models/: base.py  membership.py  organization.py  usage.py  user.py  workspace.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: auth.py
backend/app/services/: auth_service.py  jwt_service.py
backend/app/services/ai/: anthropic_provider.py  base_provider.py  errors.py  gateway.py  mock_provider.py  model_registry.py  openai_provider.py  provider_registry.py  schemas.py
backend/app/services/connectors/: __init__.py  base_connector.py  confluence_connector.py  connector_factory.py  connector_registry.py  errors.py  github_connector.py  googledrive_connector.py  jira_connector.py  linear_connector.py  mock_connector.py  notion_connector.py  schemas.py  sharepoint_connector.py  slack_connector.py
backend/app/services/rag/: __init__.py  base_retriever.py  context_builder.py  errors.py  mock_retriever.py  prompt_builder.py  rag_service.py  schemas.py
backend/nexus_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth_service.py  test_connectors.py  test_health.py  test_jwt_service.py  test_rag_service.py  test_security.py  test_user_repository.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: architecture.md  backend-overview.md  decisions.md  roadmap.md
docs/adr/: 0001-provider-agnostic-ai-gateway.md  0002-layered-backend-architecture.md  0003-rbac-permission-model.md  0004-backend-ai-gateway.md  README.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/api/: ai.ts  auth.ts  client.ts
frontend/src/constants/: ai.ts  permissions.ts
frontend/tests/: AuthContext.test.tsx  GuestRoute.test.tsx  LoginPage.test.tsx  ProtectedRoute.test.tsx  RegisterPage.test.tsx  placeholder.test.tsx  tokenStorage.test.ts  useAuth.test.tsx
(+164 files in other folders)
