[project]
name = "nexus-ai-backend"
version = "0.1.0"
description = "FastAPI backend foundation for Nexus AI"
requires-python = ">=3.11"
dependencies = [
  "alembic",
  "asyncpg",
  "fastapi",
  "passlib[bcrypt]",
  "pydantic-settings",
  "pwdlib[argon2]",
  "PyJWT",
  "sqlalchemy",
  "uvicorn[standard]"
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov", "httpx", "aiosqlite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
