[project]
name = "nexus-ai-backend"
version = "0.1.0"
description = "FastAPI backend foundation for Nexus AI"
requires-python = "~=3.11"
dependencies = [
  "alembic~=1.18.5",
  "anthropic~=0.115.0",
  "asyncpg~=0.31.0",
  "fastapi~=0.138.1",
  "openai~=1.82.0",
  "passlib[bcrypt]~=1.7.4",
  "pydantic~=2.12.5",
  "pydantic-settings~=2.14.1",
  "pwdlib[argon2]~=0.3.0",
  "PyJWT~=2.13.0",
  "sqlalchemy~=2.0.50",
  "uvicorn[standard]~=0.49.0"
]

[project.optional-dependencies]
test = [
  "pytest~=9.1.1",
  "pytest-asyncio~=1.4.0",
  "pytest-cov~=7.1.0",
  "httpx~=0.28.1",
  "aiosqlite~=0.22.1"
]
dev = ["ruff~=0.15.20", "black~=26.5.1", "isort~=8.0.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/api/*.py" = ["B008"]
"app/core/dependencies.py" = ["B008"]
"app/core/exceptions.py" = ["N818"]
"app/models/*.py" = ["N805"]
"tests/*.py" = ["B017"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
